demos/grpc/poll-summary-server/kube/base/poll-summary-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-grpc-poll-summary-server
spec:
  selector:
    matchLabels:
      app: demo-grpc-poll-summary-server
  template:
    metadata:
      labels:
        app: demo-grpc-poll-summary-server
        component: server
    spec:
      containers:
      - name: poll-summary-server
        image: poll-summary-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 50000
          name: grpc
