demos/grpc/poll-summary-server/kube/base/poll-summary-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-grpc-record-server
spec:
  selector:
    app: demo-grpc-record-server
    component: server
  ports:
  - name: grpc
    port: 50000
    targetPort: grpc
