demos/grpc/poll-summary-server/kube/base/poll-summary-server.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: demo-grpc-poll-summary
spec:
  rules:
  - host: pollsummary.grpc.demo.apps.v2tools.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-grpc-poll-summary
          servicePort: grpc
        
  tls:
  - hosts:
    - pollsummary.grpc.demo.apps.v2tools.com
    secretName: poll-summary-grpc-demo-apps-v2tools-crt
